force-app/main/default/objects/Case/fields/AdmitTerm__c.field-meta.xml
<CustomField>
    <fullName>AdmitTerm__c</fullName>
    <formula>Contact.Most_Recent_Admit_Term_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Admit Term</label>
    <type>Text</type>
</CustomField>