force-app/main/default/objects/Case/fields/AdmitType__c.field-meta.xml
<CustomField>
    <fullName>AdmitType__c</fullName>
    <formula>Contact.Admit_Type__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Admit Type</label>
    <type>Text</type>
</CustomField>