force-app/main/default/objects/Case/fields/ApplicantProgressionProgramStatus__c.field-meta.xml
<CustomField>
    <fullName>ApplicantProgressionProgramStatus__c</fullName>
    <formula>TEXT(Contact.Program_Status__c)</formula>
    <label>Applicant Progression - Program Status</label>
    <type>Text</type>
</CustomField>