force-app/main/default/objects/Case/fields/Campus__c.field-meta.xml
<CustomField>
    <fullName>Campus__c</fullName>
    <formula>TEXT(Contact.Home_Campus__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Campus</label>
    <type>Text</type>
</CustomField>