force-app/main/default/objects/Case/fields/CaseAccepted__c.field-meta.xml
<CustomField>
    <fullName>CaseAccepted__c</fullName>
    <formula>IF(
LEFT(OwnerId, 3)=&apos;005&apos;,
TRUE,
FALSE
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Case Accepted</label>
    <type>Checkbox</type>
</CustomField>