force-app/main/default/objects/Case/fields/CaseGeneratedLead__c.field-meta.xml
<CustomField>
    <fullName>CaseGeneratedLead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case Generated Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>