force-app/main/default/objects/Case/fields/CaseScorecard__c.field-meta.xml
<CustomField>
    <fullName>CaseScorecard__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case Scorecard</label>
    <referenceTo>Transcript_Scorecard__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>