force-app/main/default/objects/Case/fields/ContactAlternateEmail__c.field-meta.xml
<CustomField>
    <fullName>ContactAlternateEmail__c</fullName>
    <formula>Contact.hed__AlternateEmail__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact Alternate Email</label>
    <type>Text</type>
</CustomField>