force-app/main/default/objects/Case/fields/Defer__c.field-meta.xml
<CustomField>
    <fullName>Defer__c</fullName>
    <label>Defer</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>