force-app/main/default/objects/Case/fields/DeprecatedCaseNumber__c.field-meta.xml
<CustomField>
    <fullName>DeprecatedCaseNumber__c</fullName>
    <formula>HYPERLINK(LEFT($Api.Partner_Server_URL_260, FIND(&apos;/services&apos;, $Api.Partner_Server_URL_260))+  Id  , 
CaseNumber &amp; &quot;-&quot; &amp; TEXT(MONTH(DATEVALUE( CreatedDate )))&amp; TEXT(DAY(DATEVALUE( CreatedDate))),
&quot;_self &quot;

)</formula>
    <label>DeprecatedCase Number</label>
    <type>Text</type>
</CustomField>