force-app/main/default/objects/Case/fields/HomeCampus__c.field-meta.xml
<CustomField>
    <fullName>HomeCampus__c</fullName>
    <formula>TEXT(Contact.Home_Campus__c)</formula>
    <label>Home Campus</label>
    <type>Text</type>
</CustomField>