force-app/main/default/objects/Case/fields/How_can_we_help__c.field-meta.xml
<CustomField>
    <fullName>How_can_we_help__c</fullName>
    <formula>Contact.Tell_us_how_we_can_help_you_today__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>How can we help</label>
    <type>Text</type>
</CustomField>