force-app/main/default/objects/Case/fields/IDNumber__c.field-meta.xml
<CustomField>
    <fullName>IDNumber__c</fullName>
    <formula>Contact.Student_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ID Number</label>
    <type>Text</type>
</CustomField>