force-app/main/default/objects/Case/fields/LastTermEnrolled__c.field-meta.xml
<CustomField>
    <fullName>LastTermEnrolled__c</fullName>
    <formula>Contact.LastEnrolledTerm__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Last Term Enrolled</label>
    <type>Text</type>
</CustomField>