force-app/main/default/objects/Case/fields/New_Admit_Type__c.field-meta.xml
<CustomField>
    <fullName>New_Admit_Type__c</fullName>
    <label>New Admit Type:</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ABE – Adult Basic Education</fullName>
            </value>
            <value>
                <fullName>PPD – Personal &amp; Professional Development</fullName>
            </value>
            <value>
                <fullName>DUC – Dual Credit HS Student</fullName>
            </value>
            <value>
                <fullName>DUE – Dual Enrollment HS Student</fullName>
            </value>
            <value>
                <fullName>FYR – First Year Student</fullName>
            </value>
            <value>
                <fullName>PCR – Prior College Readmit</fullName>
            </value>
            <value>
                <fullName>RAD – Readmit</fullName>
            </value>
            <value>
                <fullName>RET -- Returning</fullName>
            </value>
            <value>
                <fullName>NDG – Non-Degree Seeking Student</fullName>
            </value>
            <value>
                <fullName>INT – International Student</fullName>
            </value>
            <value>
                <fullName>IRT – International Returning</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>