force-app/main/default/objects/Case/fields/New_Campus__c.field-meta.xml
<CustomField>
    <fullName>New_Campus__c</fullName>
    <label>New Campus:</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Harold Washington College</fullName>
            </value>
            <value>
                <fullName>Malcolm X College</fullName>
            </value>
            <value>
                <fullName>Harry S Truman College</fullName>
            </value>
            <value>
                <fullName>Wilbur Wright College</fullName>
            </value>
            <value>
                <fullName>Kennedy-King College</fullName>
            </value>
            <value>
                <fullName>Richard J Daley College</fullName>
            </value>
            <value>
                <fullName>Olive Harvey College</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>