force-app/main/default/objects/Case/fields/Phone_Number_to_be_Removed__c.field-meta.xml
<CustomField>
    <fullName>Phone_Number_to_be_Removed__c</fullName>
    <label>Phone Number to be Removed:</label>
    <type>Phone</type>
</CustomField>