force-app/main/default/objects/Case/fields/QuickLinks__c.field-meta.xml
<CustomField>
    <fullName>QuickLinks__c</fullName>
    <formula>HYPERLINK(&quot;http://www.ccc.edu/vss&quot;, &quot;www.ccc.edu/vss&quot;)&amp; BR() &amp;
HYPERLINK(&quot;https://www.ccc.edu/services/Pages/Residency-Verification.aspx&quot;, &quot;Residency&quot;)&amp; BR()&amp;
HYPERLINK(&quot;https://www.ccc.edu/services/Pages/Submit-Official-College-Transcripts.aspx&quot;, &quot;Submit Transcripts&quot;)&amp; BR()&amp;
HYPERLINK(&quot;https://www.ccc.edu/departments/pages/financial-aid.aspx&quot;, &quot;Financial Aid&quot;)&amp; BR()&amp;
HYPERLINK(&quot;https://www.ccc.edu/services/pages/placement-tests.aspx&quot;, &quot;Placement Testing&quot;)&amp; BR()&amp;
HYPERLINK(&quot;https://colleges.ccc.edu/paying-for-college/&quot;, &quot;Ways to Pay&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Quick Links</label>
    <type>Text</type>
</CustomField>