force-app/main/default/objects/Case/fields/Remove_Phone_Number_on_File__c.field-meta.xml
<CustomField>
    <fullName>Remove_Phone_Number_on_File__c</fullName>
    <label>Remove Phone Number on File:</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>