force-app/main/default/objects/Case/fields/RespondedtoContact__c.field-meta.xml
<CustomField>
    <fullName>RespondedtoContact__c</fullName>
    <formula>IF(
 TEXT(Status)= &quot;Respond to Contact&quot;,
TRUE,
FALSE
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Responded to Contact</label>
    <type>Checkbox</type>
</CustomField>