force-app/main/default/objects/Case/fields/ScorecardCreated__c.field-meta.xml
<CustomField>
    <fullName>ScorecardCreated__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flow checks the box when a scorecard is created on a case. This allows the results to show after the scorecard is graded.</description>
    <label>Scorecard Created</label>
    <type>Checkbox</type>
</CustomField>