force-app/main/default/objects/Case/fields/SubType__c.field-meta.xml
<CustomField>
    <fullName>SubType__c</fullName>
    <label>SubType</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Type</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>How do I apply?</fullName>
            </value>
            <value>
                <fullName>Residency Verification</fullName>
            </value>
            <value>
                <fullName>Financial Documents</fullName>
            </value>
            <value>
                <fullName>Submit Transcripts</fullName>
            </value>
            <value>
                <fullName>Testing</fullName>
            </value>
            <value>
                <fullName>Academic Planning</fullName>
            </value>
            <value>
                <fullName>Payment Options</fullName>
            </value>
            <value>
                <fullName>Supsended Application</fullName>
            </value>
            <value>
                <fullName>Changes for Admissions</fullName>
            </value>
            <value>
                <fullName>Ordering Transcripts</fullName>
            </value>
            <value>
                <fullName>Advisor Appointments</fullName>
            </value>
            <value>
                <fullName>Degree Audit</fullName>
            </value>
            <value>
                <fullName>GED Enrollment</fullName>
            </value>
            <value>
                <fullName>ESL Enrollment</fullName>
            </value>
            <value>
                <fullName>Placement Testing - Adult Ed</fullName>
            </value>
            <value>
                <fullName>GED Test</fullName>
            </value>
            <value>
                <fullName>Application Issue - Adult Ed</fullName>
            </value>
            <value>
                <fullName>GED Test Cost</fullName>
            </value>
            <value>
                <fullName>GED Transcript Request</fullName>
            </value>
            <value>
                <fullName>GED Test Scholarship</fullName>
            </value>
            <value>
                <fullName>GED Class Details</fullName>
            </value>
            <value>
                <fullName>ESL Class Details</fullName>
            </value>
            <value>
                <fullName>Alternative High School</fullName>
            </value>
            <value>
                <fullName>Debt Relief Program</fullName>
            </value>
            <value>
                <fullName>Class Details</fullName>
            </value>
            <value>
                <fullName>Pre-Requisites</fullName>
            </value>
            <value>
                <fullName>Class Schedule</fullName>
            </value>
            <value>
                <fullName>Class Availability</fullName>
            </value>
            <value>
                <fullName>Class Location</fullName>
            </value>
            <value>
                <fullName>Personal/Professional Development</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>