force-app/main/default/objects/Case/fields/Withdraw_the_Application_in_CS9__c.field-meta.xml
<CustomField>
    <fullName>Withdraw_the_Application_in_CS9__c</fullName>
    <label>Withdraw the Application in CS9</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>