force-app/main/default/objects/Case/validationRules/Stop_Type_a_Subtype_Edits_After_Case_Sub.validationRule-meta.xml
<ValidationRule>
    <fullName>Stop_Type_a_Subtype_Edits_After_Case_Sub</fullName>
    <active>true</active>
    <description>This prevents edits to the Case Type &amp; Subtype Picklists After the Case has been Submitted.</description>
    <errorConditionFormula>AND(
  OR(
    AND(
      ISCHANGED(Type),
      OR(
        NOT(ISNEW()),
        ISBLANK(PRIORVALUE(Type))
      )
    ),
    AND(
      ISCHANGED( SubType__c ),
      OR(
        NOT(ISNEW()),
        ISBLANK(PRIORVALUE(SubType__c))
      )
    )
  )
)</errorConditionFormula>
    <errorDisplayField>Type</errorDisplayField>
    <errorMessage>You cannot change this field value once the case has been created. Please contact your administrator or close this case and create a new one with the correct values.</errorMessage>
</ValidationRule>