force-app/main/default/objects/Case/listViews/Admissions_Case.listView-meta.xml
<ListView>
    <fullName>Admissions_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>Admissions</label>
    <queue>Admissions</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>