force-app/main/default/objects/Case/listViews/Adult_Education_Case.listView-meta.xml
<ListView>
    <fullName>Adult_Education_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>Adult Education</label>
    <queue>Adult_Education</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>