force-app/main/default/objects/Case/listViews/After_Hours_Emails_Case.listView-meta.xml
<ListView>
    <fullName>After_Hours_Emails_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>After Hours Emails</label>
    <queue>After_Hours_Emails</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>