force-app/main/default/objects/Case/listViews/Compliments_Complaints_Case.listView-meta.xml
<ListView>
    <fullName>Compliments_Complaints_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>Compliments/Complaints</label>
    <queue>Compliments_Complaints</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>