force-app/main/default/objects/Case/listViews/Continuing_Education_Case.listView-meta.xml
<ListView>
    <fullName>Continuing_Education_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>Continuing Education</label>
    <queue>Continuing_Education</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>