force-app/main/default/objects/Case/listViews/Daley_Recruiter_Case.listView-meta.xml
<ListView>
    <fullName>Daley_Recruiter_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>Daley Recruiter</label>
    <queue>Daley_Recruiter</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>