force-app/main/default/objects/Case/listViews/Harold_Washington_Recruiter_Case.listView-meta.xml
<ListView>
    <fullName>Harold_Washington_Recruiter_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>Harold Washington Recruiter</label>
    <queue>Harold_Washington_Recruiter</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>