force-app/main/default/objects/Case/listViews/IT_Helpdesk_Case.listView-meta.xml
<ListView>
    <fullName>IT_Helpdesk_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>IT Helpdesk</label>
    <queue>IT_Helpdesk</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>