force-app/main/default/objects/Case/listViews/Kennedy_King_Recruiter_Case.listView-meta.xml
<ListView>
    <fullName>Kennedy_King_Recruiter_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>Kennedy-King Recruiter</label>
    <queue>Kennedy_King_Recruiter</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>