force-app/main/default/objects/Case/listViews/Malcolm_X_Recruiter_Case.listView-meta.xml
<ListView>
    <fullName>Malcolm_X_Recruiter_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>Malcolm X Recruiter</label>
    <queue>Malcolm_X_Recruiter</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>