force-app/main/default/objects/Case/listViews/Need_Help_Queue_Case.listView-meta.xml
<ListView>
    <fullName>Need_Help_Queue_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>Need Help Queue</label>
    <queue>Need_Help_Queue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>